busuanzi: fix alignment problems in footer

--- a/source/css/_common/components/footer/footer.styl
+++ b/source/css/_common/components/footer/footer.styl
@@ -24,14 +24,15 @@
   }
 }
 
-.busuanzi-count {
-  &:before {
-    content: " ";
-    float: left;
-    width: 260px;
-    min-height: 25px;
+if hexo-config("scheme") == Pisces
+  .busuanzi-count {
+    &:before {
+      content: " ";
+      float: left;
+      width: 260px;
+      min-height: 25px;
+    }
   }
-}
 
 .site-uv,
 .site-pv,
